# 123

./: Dockerfile  README.md  config.yml  docker-compose.yml  pyproject.toml
chat_scanner/: main.py
chat_scanner/apps/account/: base.py  client.py  dispatcher.py  methods.py  observer.py  register.py
chat_scanner/apps/chatgpt/: model.py
chat_scanner/apps/jobs/: __init__.py  payment.py  subs.py
chat_scanner/apps/merchant/: __init__.py  base.py  cryptopay.py  gecko.py  wallet.py  yookassa.py
chat_scanner/config/: cli.py  config.py  log.py  webhook.py
chat_scanner/config/db/: base.py  postgresdb.py  sqlitedb.py
chat_scanner/db/models/: __init__.py
chat_scanner/db/requests/: __init__.py  base.py
chat_scanner/init/: __init__.py  commands.py  db.py  dispatchers.py  middlewares.py  routers.py  scheduler.py  translator.py
chat_scanner/locales/en/: account.ftl  common.ftl  payment.ftl  project.ftl  withdraw.ftl
chat_scanner/locales/ru/: account.ftl  common.ftl  payment.ftl  project.ftl  withdraw.ftl
chat_scanner/utils/: message.py  parser_csv.py  users.csv
db_data/: postmaster.pid
db_data/base/13757/: 1247  1249  1259  2608  2610  2619  2619_fsm  2658  2659  2662  2663  2673  2674  2678  2679  2696  2703  2704  2840  2841  3455  (+1 more)
db_data/global/: 1214  1232  1233  1260  1262  2671  2676  2677  pg_control  pg_internal.init
db_data/pg_stat_tmp/: db_0.stat  db_13757.stat  db_16384.stat  global.stat
db_data/pg_xact/: 0000
scripts/: run.sh
tests/22 мая работающая пересылка всех постов без стоп слов/: check.py  project.py  send.py  settings.py
(+141 files in other folders)
