[tool.poetry]
name = "chat-scanner"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{include = "chat_scanner"}]

[tool.poetry.dependencies]
auto_selenium = {}
uvloop = { version = "*", markers = "sys_platform != 'win32'" }
python = "^3.11"
loguru = "^0.7.0"
pydantic = "^1.10.7"
pyyaml = "^6.0"
apscheduler = "^3.10.1"
cachetools = "^5.3.0"
glqiwiapi = "^2.18.3"
fluentogram = "^1.1.6"
watchdog = "^3.0.0"
jinja2 = "^3.1.2"
sqlalchemy = "^2.0.17"
sqlalchemy-utils = "^0.41.1"
asyncpg = "^0.27.0"
pyrogram = "^2.0.106"
asyncache = "^0.3.1"
aiogram = {version = "^3.0.0b7", allow-prereleases = true}
tgcrypto = "^1.2.5"
pycryptopay-sdk = "^1.7.1"
pycoingecko = "^3.1.0"
pandas = "^2.0.1"
openpyxl = "^3.1.2"
openai = "^0.27.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
